# Koivisto

./: CMakeLists.txt  make_tournament_from_cmake.py
src_files/: Bitboard.h  Board.cpp  Board.h  Util.h  eval.cpp  eval.h  main.cpp  makefile  movegen.cpp  pre.js  search.cpp  search.h  uci.cpp  uci.h
src_files/fecppnn/: Data.cpp  Data.h  Layer.h  Network.cpp  Network.h  activations.cpp  activations.h  affine.cpp  affine.h  config.h  loss.cpp  loss.h  optimiser.cpp  optimiser.h  sample.h  structure.h  transform.cpp  transform.h
src_files/fecppnn/data/: Data.cpp  Data.h
src_files/fecppnn/layer/: ClippedReLU.cpp  ClippedReLU.h  Concat.cpp  Concat.h  DenseLayer.cpp  DenseLayer.h  DenseLayer_Sparse_NF.cpp  DenseLayer_Sparse_NF.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h
src_files/fecppnn/loss/: Loss.cpp  Loss.h  MSE.cpp  MSE.h
src_files/fecppnn/network/: Network.cpp  Network.h
src_files/fecppnn/optimiser/: GD.cpp  GD.h  Optimiser.cpp  Optimiser.h
src_files/fecppnn/special/: KingPawnNetwork.h  KingPieceNetwork.h  Mapping.h
src_files/generator/: game.cpp  game.h  genpool.cpp  genpool.h
src_files/nnue/: nnue_eval.h
